--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3020,7 +3020,7 @@ p.row-content {
 }
 
 .title-color {
-	background: #f55a4e;
+	background: #4288f5;
 	color:#fff;
 	text-align: center;
 	border-radius: 1px;
