--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -21,7 +21,7 @@
 }
 
 #drop{
-    background-color: #f55a4e;
+    background-color: #dddddd;
     padding: 40px 50px;
     margin-bottom: 30px;
     border: 5px dashed #666666;
